generate landing page with web smith round 2

--- a/.aigne/web-smith/history.yaml
+++ b/.aigne/web-smith/history.yaml
@@ -1,4 +1,28 @@
 entries:
+  - timestamp: 2025-10-16T13:57:25.837Z
+    operation: page_update
+    feedback: 在最后增加一个section：Ready to Automate Your Documentation?
+    page: /home
+  - timestamp: 2025-10-16T13:47:18.818Z
+    operation: page_update
+    feedback: 删除 setcion5  Ready for Your Enterprise
+    page: /home
+  - timestamp: 2025-10-16T13:42:02.839Z
+    operation: page_update
+    feedback: 帮我把 section5 移除
+    page: /home
+  - timestamp: 2025-10-16T13:26:00.115Z
+    operation: page_update
+    feedback: 删除 Section 5
+    page: /home
+  - timestamp: 2025-10-16T13:11:42.424Z
+    operation: page_update
+    feedback: 把 section 1 的 Get Started Now 链接改成 https://docsmith.aigne.io/docs/docsmith
+    page: /home
+  - timestamp: 2025-10-16T13:09:56.255Z
+    operation: page_update
+    feedback: 帮我把 section1 使用 full background hero
+    page: /home
   - timestamp: 2025-10-16T03:01:39.171Z
     operation: page_update
     feedback: 帮我把 section1 使用 full background hero
