--- a/.aigne/web-smith/pages/workspace/en/home.yaml
+++ b/.aigne/web-smith/pages/workspace/en/home.yaml
@@ -1,136 +1,114 @@
-meta:
-  title: "AIGNE DocSmith | AI-Powered Code Documentation"
-  description: "Generate comprehensive, multi-language documentation from your codebase automatically with AIGNE DocSmith. Our AI-powered tool understands your code to create accurate, up-to-date docs, saving you time and effort."
-  image: "mediakit://aigne-docsmith-hero.png"
-sections:
-  - sectionName: "hero"
-    sectionSummary: "Introduces AIGNE DocSmith with a powerful, benefit-driven headline, a concise explanation of its value, and clear calls-to-action to get started or view the project on GitHub, paired with a compelling visual."
-    splitHeroTitle: "Documentation that Writes Itself"
-    splitHeroDescription: "Stop writing docs and start shipping. AIGNE DocSmith uses AI to analyze your code and generate comprehensive, multi-language documentation automatically. Keep your docs perfectly in sync, effortlessly."
-    splitHeroActions:
-      - text: "Get Started Now"
-        link: "https://github.com/AIGNE-io/aigne-doc-smith#quick-start"
-      - text: "View on GitHub"
-        link: "https://github.com/AIGNE-io/aigne-doc-smith"
-    splitHeroRightImage: "mediakit://aigne-docsmith-hero.png"
-  - sectionName: "howItWorks"
-    sectionSummary: "Visually demonstrates the core workflow of AIGNE DocSmith using a series of animated terminal players. This 'show, don't tell' approach builds credibility and clearly communicates the tool's ease of use and power."
-    oneColumnGridTitle: "See DocSmith in Action"
-    list:
-      - sectionName: "generateDemo"
-        sectionSummary: "Shows the 'generate' command in action, highlighting the initial, zero-config documentation creation process."
-        terminalLeft:
-          title: "1. Generate Your Docs"
-          description: "Run a single command. DocSmith analyzes your project, plans a logical structure, and generates comprehensive documentation from scratch. Zero config required."
-          actionTitle: ""
-          actionLink: ""
-        terminalPlaybackData: "mediakit://generate.json"
-      - sectionName: "updateDemo"
-        sectionSummary: "Demonstrates the 'update' command, emphasizing how DocSmith intelligently keeps documentation synchronized with code changes."
-        terminalRight:
-          title: "2. Keep Them in Sync"
-          description: "Code changes? No problem. DocSmith detects updates and intelligently regenerates only the affected sections, ensuring your docs are always accurate."
-          actionTitle: ""
-          actionLink: ""
-        terminalPlaybackData: "mediakit://update.json"
-      - sectionName: "translateDemo"
-        sectionSummary: "Illustrates the 'translate' command, showcasing the seamless multi-language translation capabilities."
-        terminalLeft:
-          title: "3. Go Global Instantly"
-          description: "Reach a worldwide audience. Translate your documentation into 12 professionally supported languages with a single command, maintaining technical accuracy."
-          actionTitle: ""
-          actionLink: ""
-        terminalPlaybackData: "mediakit://translate.json"
-      - sectionName: "publishDemo"
-        sectionSummary: "Highlights the 'publish' command, showing users how easy it is to make their documentation live and accessible."
-        terminalRight:
-          title: "4. Publish with One Click"
-          description: "Make your docs live! Publish directly to the DocSmith platform or your own Discuss Kit instance and share with your team or the world."
-          actionTitle: ""
-          actionLink: ""
-        terminalPlaybackData: "mediakit://publish.json"
-  - sectionName: "features"
-    sectionSummary: "Presents the key features of DocSmith in a scannable 3-column grid. Each feature is paired with an icon and a benefit-oriented description to quickly communicate the product's value."
-    threeColumnGridTitle: "Powerful Features, Effortless Experience"
-    list:
-      - sectionName: "intelligentGeneration"
-        sectionSummary: "Feature highlight for AI-powered intelligent content generation."
-        iconName: "lucide:brain-circuit"
-        cardTitle: "Intelligent Generation"
-        cardDescription: "Our AI understands code intent, generating not just what your code does, but why. Get logical structure and context-rich content automatically."
-      - sectionName: "multiLanguageSupport"
-        sectionSummary: "Feature highlight for multi-language translation capabilities."
-        iconName: "lucide:languages"
-        cardTitle: "Global Ready"
-        cardDescription: "Translate your docs into 12 languages. Our context-aware AI ensures professional-grade, technically accurate translations."
-      - sectionName: "llmIntegration"
-        sectionSummary: "Feature highlight for flexible Large Language Model integration."
-        iconName: "lucide:cubes"
-        cardTitle: "Flexible LLM Support"
-        cardDescription: "Use AIGNE Hub out-of-the-box or bring your own keys for OpenAI, Google, Anthropic, and more. You're in control."
-      - sectionName: "smartUpdates"
-        sectionSummary: "Feature highlight for the automatic documentation update functionality."
-        iconName: "lucide:refresh-cw"
-        cardTitle: "Always Up-to-Date"
-        cardDescription: "DocSmith automatically detects code changes and updates only the relevant documentation, saving time and ensuring accuracy."
-      - sectionName: "zeroConfig"
-        sectionSummary: "Feature highlight for the easy, zero-configuration setup process."
-        iconName: "lucide:zap"
-        cardTitle: "Zero Configuration"
-        cardDescription: "Get started in seconds. DocSmith auto-detects your project's tech stack and smart defaults get you running instantly."
-      - sectionName: "oneClickPublishing"
-        sectionSummary: "Feature highlight for the simple, one-click publishing workflow."
-        iconName: "lucide:rocket"
-        cardTitle: "One-Click Publishing"
-        cardDescription: "Publish your docs to DocSmith Cloud or your own Discuss Kit instance with a single command. Sharing has never been easier."
-  - sectionName: "quickStart"
-    sectionSummary: "Provides a simple, two-step guide to get users started quickly. Each step is presented in a clear card with a title, description, and the exact code snippet to run."
-    oneColumnGridTitle: "Get Started in 60 Seconds"
-    list:
-      - sectionName: "installCliCard"
-        sectionSummary: "The first step in the quick start guide: installing the AIGNE CLI, presented in a content card with a code block."
-        contentCardTitle: "Step 1: Install the AIGNE CLI"
-        contentCardDescription: "Get the power of DocSmith on your machine with a single global install command via npm."
-        contentCardBottomCode:
-          name: "bash"
-          content: "npm install -g @aigne/cli"
-      - sectionName: "generateDocsCard"
-        sectionSummary: "The second step in the quick start guide: running the generate command, presented in a content card with a code block."
-        contentCardTitle: "Step 2: Generate Your First Doc"
-        contentCardDescription: "Navigate to your project's root directory and run the generate command. DocSmith handles the rest, from analysis to content creation."
-        contentCardBottomCode:
-          name: "bash"
-          content: "cd /path/to/your/project\naigne doc generate"
-  - sectionName: "enterpriseFeatures"
-    sectionSummary: "Addresses the needs of larger organizations by highlighting enterprise-grade features and providing a clear call-to-action to contact sales for more information."
-    featureSectionTitle: "Ready for Your Enterprise"
-    featureSectionDescription: "DocSmith scales with your team. Get team collaboration, custom branding, private cloud deployment, and priority support. Secure, compliant, and built for production."
-    featureSectionAction:
-      text: "Contact Sales"
-      link: "https://www.aigne.io/contact"
-    featureSectionBottomImage: "mediakit://doc-regenerate.png"
-  - sectionName: "faq"
-    sectionSummary: "Addresses common questions about licensing, API keys, language support, publishing, and enterprise use to build trust and overcome potential user objections."
-    faqTitle: "Frequently Asked Questions"
-    faqList:
-      - question: "How is AIGNE DocSmith licensed?"
-        answer: "AIGNE DocSmith is licensed under the Elastic License 2.0. It's free for most use cases, including personal and commercial projects. The main restriction is that you cannot offer it as a competing hosted documentation service."
-      - question: "Do I need my own AI model API keys to start?"
-        answer: "No! DocSmith uses AIGNE Hub by default, giving you access to powerful models like Google Gemini and OpenAI GPT without needing your own keys. You can optionally configure your own keys for direct provider access if you prefer."
-      - question: "What languages can my documentation be translated into?"
-        answer: "DocSmith supports professional, context-aware translation for 12 languages: English, Chinese (Simplified & Traditional), Japanese, Korean, Spanish, French, German, Portuguese, Russian, Italian, and Arabic."
-      - question: "Where can I publish my documentation?"
-        answer: "You have options! You can publish with one click to the public DocSmith platform or deploy to your own self-hosted instance of Discuss Kit for full control."
-      - question: "What happens when I update my code?"
-        answer: "DocSmith's Smart Updates feature automatically detects changes in your codebase. It then intelligently updates only the relevant documentation sections, ensuring your docs stay in sync without a full regeneration."
-      - question: "Is DocSmith suitable for enterprise use?"
-        answer: "Absolutely. We offer enterprise features including team collaboration, custom branding, API integration for CI/CD pipelines, private cloud deployments, and priority support. Contact us for more details!"
-  - sectionName: "finalCta"
-    sectionSummary: "A final, energetic call-to-action at the end of the page, encouraging users to take the next step by either getting started or exploring the project on GitHub."
-    ctaTitle: "Ready to Automate Your Documentation?"
-    ctaDescription: "Stop the manual work and let AI keep your docs perfect. Get started with DocSmith today and see the difference."
-    cta:
-      - text: "Generate Your First Doc"
-        link: "https://github.com/AIGNE-io/aigne-doc-smith#quick-start"
-      - text: "View on GitHub"
-        link: "https://github.com/AIGNE-io/aigne-doc-smith"
+"meta":
+  "title": "AIGNE DocSmith | AI-Powered Code Documentation"
+  "description": "Generate comprehensive, multi-language documentation from your codebase automatically with AIGNE DocSmith. Our AI-powered tool understands your code to create accurate, up-to-date docs, saving you time and effort."
+  "image": "mediakit://aigne-docsmith-hero.png"
+"sections":
+  - "sectionName": "hero"
+    "sectionSummary": "Introduces AIGNE DocSmith with a powerful, benefit-driven headline, a concise explanation of its value, and clear calls-to-action to get started or view the project on GitHub, all set against an immersive background image."
+    "fullBackgroundHeroCenteredTitle": "Documentation that Writes Itself"
+    "fullBackgroundHeroCenteredDescription": "Stop writing docs and start shipping. AIGNE DocSmith uses AI to analyze your code and generate comprehensive, multi-language documentation automatically. Keep your docs perfectly in sync, effortlessly."
+    "fullBackgroundHeroActions":
+      - "text": "Get Started Now"
+        "link": "https://docsmith.aigne.io/docs/docsmith"
+      - "text": "View on GitHub"
+        "link": "https://github.com/AIGNE-io/aigne-doc-smith"
+    "fullBackgroundHeroImage": "mediakit://hero-background.webp"
+  - "sectionName": "howItWorks"
+    "sectionSummary": "Visually demonstrates the core workflow of AIGNE DocSmith using a series of animated terminal players. This 'show, don't tell' approach builds credibility and clearly communicates the tool's ease of use and power."
+    "oneColumnGridTitle": "See DocSmith in Action"
+    "list":
+      - "sectionName": "generateDemo"
+        "sectionSummary": "Shows the 'generate' command in action, highlighting the initial, zero-config documentation creation process."
+        "terminalLeft":
+          "title": "1. Generate Your Docs"
+          "description": "Run a single command. DocSmith analyzes your project, plans a logical structure, and generates comprehensive documentation from scratch. Zero config required."
+          "actionTitle": ""
+          "actionLink": ""
+        "terminalPlaybackData": "mediakit://generate.json"
+      - "sectionName": "updateDemo"
+        "sectionSummary": "Demonstrates the 'update' command, emphasizing how DocSmith intelligently keeps documentation synchronized with code changes."
+        "terminalRight":
+          "title": "2. Keep Them in Sync"
+          "description": "Code changes? No problem. DocSmith detects updates and intelligently regenerates only the affected sections, ensuring your docs are always accurate."
+          "actionTitle": ""
+          "actionLink": ""
+        "terminalPlaybackData": "mediakit://update.json"
+      - "sectionName": "translateDemo"
+        "sectionSummary": "Illustrates the 'translate' command, showcasing the seamless multi-language translation capabilities."
+        "terminalLeft":
+          "title": "3. Go Global Instantly"
+          "description": "Reach a worldwide audience. Translate your documentation into 12 professionally supported languages with a single command, maintaining technical accuracy."
+          "actionTitle": ""
+          "actionLink": ""
+        "terminalPlaybackData": "mediakit://translate.json"
+      - "sectionName": "publishDemo"
+        "sectionSummary": "Highlights the 'publish' command, showing users how easy it is to make their documentation live and accessible."
+        "terminalRight":
+          "title": "4. Publish with One Click"
+          "description": "Make your docs live! Publish directly to the DocSmith platform or your own Discuss Kit instance and share with your team or the world."
+          "actionTitle": ""
+          "actionLink": ""
+        "terminalPlaybackData": "mediakit://publish.json"
+  - "sectionName": "features"
+    "sectionSummary": "Presents the key features of DocSmith in a scannable 3-column grid. Each feature is paired with an icon and a benefit-oriented description to quickly communicate the product's value."
+    "threeColumnGridTitle": "Powerful Features, Effortless Experience"
+    "list":
+      - "sectionName": "intelligentGeneration"
+        "sectionSummary": "Feature highlight for AI-powered intelligent content generation."
+        "iconName": "lucide:brain-circuit"
+        "cardTitle": "Intelligent Generation"
+        "cardDescription": "Our AI understands code intent, generating not just what your code does, but why. Get logical structure and context-rich content automatically."
+      - "sectionName": "multiLanguageSupport"
+        "sectionSummary": "Feature highlight for multi-language translation capabilities."
+        "iconName": "lucide:languages"
+        "cardTitle": "Global Ready"
+        "cardDescription": "Translate your docs into 12 languages. Our context-aware AI ensures professional-grade, technically accurate translations."
+      - "sectionName": "llmIntegration"
+        "sectionSummary": "Feature highlight for flexible Large Language Model integration."
+        "iconName": "lucide:cubes"
+        "cardTitle": "Flexible LLM Support"
+        "cardDescription": "Use AIGNE Hub out-of-the-box or bring your own keys for OpenAI, Google, Anthropic, and more. You're in control."
+      - "sectionName": "smartUpdates"
+        "sectionSummary": "Feature highlight for the automatic documentation update functionality."
+        "iconName": "lucide:refresh-cw"
+        "cardTitle": "Always Up-to-Date"
+        "cardDescription": "DocSmith automatically detects code changes and updates only the relevant documentation, saving time and ensuring accuracy."
+      - "sectionName": "zeroConfig"
+        "sectionSummary": "Feature highlight for the easy, zero-configuration setup process."
+        "iconName": "lucide:zap"
+        "cardTitle": "Zero Configuration"
+        "cardDescription": "Get started in seconds. DocSmith auto-detects your project's tech stack and smart defaults get you running instantly."
+      - "sectionName": "oneClickPublishing"
+        "sectionSummary": "Feature highlight for the simple, one-click publishing workflow."
+        "iconName": "lucide:rocket"
+        "cardTitle": "One-Click Publishing"
+        "cardDescription": "Publish your docs to DocSmith Cloud or your own Discuss Kit instance with a single command. Sharing has never been easier."
+  - "sectionName": "quickStart"
+    "sectionSummary": "Provides a simple, two-step guide to get users started quickly. Each step is presented in a clear card with a title, description, and the exact code snippet to run."
+    "oneColumnGridTitle": "Get Started in 60 Seconds"
+    "list":
+      - "sectionName": "installCliCard"
+        "sectionSummary": "The first step in the quick start guide: installing the AIGNE CLI, presented in a content card with a code block."
+        "contentCardTitle": "Step 1: Install the AIGNE CLI"
+        "contentCardDescription": "Get the power of DocSmith on your machine with a single global install command via npm."
+        "contentCardBottomCode":
+          "name": "bash"
+          "content": "npm install -g @aigne/cli"
+      - "sectionName": "generateDocsCard"
+        "sectionSummary": "The second step in the quick start guide: running the generate command, presented in a content card with a code block."
+        "contentCardTitle": "Step 2: Generate Your First Doc"
+        "contentCardDescription": "Navigate to your project's root directory and run the generate command. DocSmith handles the rest, from analysis to content creation."
+        "contentCardBottomCode":
+          "name": "bash"
+          "content": "cd /path/to/your/project
+
+            aigne doc generate"
+  - "sectionName": "finalCta"
+    "sectionSummary": "A final, compelling call-to-action that encourages users to get started with DocSmith, reinforcing the primary conversion goal."
+    "ctaTitle": "Ready to Automate Your Documentation?"
+    "ctaDescription": "Stop the manual grind and let AIGNE DocSmith build brilliant, always-current docs for you. Get started now and reclaim your time to code!"
+    "cta":
+      - "text": "Try It Now"
+        "link": "https://docsmith.aigne.io/docs/docsmith"
+      - "text": "See it on GitHub"
+        "link": "https://github.com/AIGNE-io/aigne-doc-smith"
