--- a/.aigne/web-smith/translation-cache.yaml
+++ b/.aigne/web-smith/translation-cache.yaml
@@ -4,3 +4,5 @@ AIGNE DocSmith is a powerful, AI-driven documentation generation tool built on t
   en: AIGNE DocSmith is a powerful, AI-driven documentation generation tool built
     on the AIGNE Framework. It automates the creation of detailed, structured,
     and multi-language documentation directly from your source code.
+DocSmith Landing Pages:
+  en: DocSmith Landing Pages
